Fix header background to be centered on mobile.

--- a/assets/stylesheets/_openify/header.less
+++ b/assets/stylesheets/_openify/header.less
@@ -1,7 +1,7 @@
 header {
     height: 100%;
     background-image: url('../../images/header.jpg');
-    background-position: 0 0;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     > .logo-container {
